feat edit /delet news /personal
